# todoapp-fastapi-react-docker

backend/: .env  main.py  pyproject.toml
backend/backend/: db.py  models.py  services.py
backend/backend/routers/: todos.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js
