[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Muhammad Aasim <47273318+muhammadaasim@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.5"
sqlmodel = "^0.0.16"
asyncpg = "^0.30.0"
typing-extensions = "^4.12.2"
psycopg2 = "^2.9.10"
uvicorn = {version = "^0.27.1", extras = ["standard"]}
psycopg = {version = "^3.1.18", extras = ["binary"]}
python-multipart = "^0.0.9"
email-validator = "^2.1.1"
passlib = {version = "^1.7.4", extras = ["bcrypt"]}
tenacity = "^8.2.3"
pydantic = "^2.6.4"
emails = "^0.6"
gunicorn = "^21.2.0"
jinja2 = "^3.1.3"
alembic = "^1.13.1"
python-jose = {version = "^3.3.0", extras = ["cryptography"]}
httpx = "^0.27.0"
bcrypt = "4.0.1"
pydantic-settings = "^2.2.1"
sentry-sdk = {version = "^1.42.0", extras = ["fastapi"]}
aiokafka = "^0.10.0"


[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
mypy = "^1.9.0"
ruff = "^0.3.2"
pre-commit = "^3.6.2"
types-python-jose = "^3.3.4.20240106"
types-passlib = "^1.7.7.20240311"
coverage = "^7.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
